--- a/masters/css/mobile.css
+++ b/masters/css/mobile.css
@@ -3062,7 +3062,7 @@ textarea.input-group-sm > .form-control,textarea.input-group-sm > .input-group-a
 .nav-pills > li > a:hover {
     width: 10px;
     height: 10px;
-    background: #ff327d;
+    background: rgb(254, 203, 48);
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
@@ -3074,7 +3074,7 @@ textarea.input-group-sm > .form-control,textarea.input-group-sm > .input-group-a
 }
 
 .nav-pills > li.active > a,.nav-pills > li.active > a:hover,.nav-pills > li.active > a:focus {
-    background: #ff327d;
+    background: rgb(254, 203, 48);
     width: 10px;
     height: 10px;
     -webkit-transition: all .2s ease-in-out;
