change theme color

--- a/masters/css/prog.css
+++ b/masters/css/prog.css
@@ -487,10 +487,10 @@ and (max-width : 1300px)
 	}
 	/* MMGT */
 	#page-mmgt .prog_in-slide-content {
-		background-color: rgb(254, 203, 48);
+		background-color: #fc377e;
 	}
 	#page-mmgt .btn-prog:hover {
-		color: rgb(254, 203, 48);
+		color: #fc377e;
 	}
 	#page-mmgt #section5 {
 	padding-top: 0px;
@@ -647,7 +647,7 @@ and (max-device-width : 1024px),
 	}
 	.prog_in-slide-content {
 		color: #333;
-		background-color: rgb(254, 203, 48);
+		background-color: #fc377e;
 		font-family: 'Roboto', sans-serif;
 		margin-left: auto;
 		margin-right: auto;
