--- a/masters/en/mmai.css
+++ b/masters/en/mmai.css
@@ -63,7 +63,7 @@
 }
 
 #page-mmai #prog-Curriculum {
-    height: 920px;
+    min-height: 720px;
 }
 
 #page-mmai #section4 {
@@ -172,9 +172,6 @@ padding-top: 80px;
         bottom: 32%;
     }
 
-    #page-mmai #prog-Curriculum {
-        height: 2020px;
-    }
 }
 
 @media only screen and (max-width : 768px) {
@@ -187,9 +184,5 @@ padding-top: 80px;
         
         #page-mmai #section5 {
         padding-top: 0px;
-        }
-
-        #page-mmai #prog-Curriculum {
-            height: 2420px;
         }
 }
