--- a/masters/en/mmai.css
+++ b/masters/en/mmai.css
@@ -183,6 +183,11 @@ padding-top: 80px;
         }
         
         #page-mmai #section5 {
-        padding-top: 0px;
+            padding-top: 0px;
+        }
+
+        .img_cover{
+            margin-left: -50%;
+            margin-top: -30%;
         }
 }
