change cover img focus 2

--- a/masters/en/mmai.css
+++ b/masters/en/mmai.css
@@ -186,7 +186,7 @@ padding-top: 80px;
             padding-top: 0px;
         }
 
-        .img_cover{
+        .img-cover{
             margin-left: -50%;
             margin-top: -30%;
         }
